Maybe fixing icons not showing on mobile

--- a/docs/styles/extras.css
+++ b/docs/styles/extras.css
@@ -196,11 +196,11 @@ h3 {
 }
 
 
-@media only screen and (max-width: 768px) {
+@media screen and (min-width: 780px) {
   /* For mobile phones: */
   .social-icon {
     color: var(--icon-color);
-    height: 3vw;
+    height: 5vw;
   }
 }
 .social-icon {
